# Selenium

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
core/: base_api.py  base_page.py  constants.py
core/base_page/: actions.py  base_page.py  elements.py
core/plugins/html_report/: plugin.py
core/plugins/slack/: plugin.py
core/plugins/xray/: plugin.py
pages/blog/: blog_page.py
pages/home/: home_page.py
reports/: .gitignore
src/qawa/: conftest.py
src/qawa/core/: base_api.py  base_page.py  constants.py
src/qawa/core/plugins/html_report/: plugin.py
src/qawa/core/plugins/slack/: payload_template.json  plugin.py
src/qawa/core/plugins/xray/: plugin.py
src/qawa/pages/blog/: blog_page.py
src/qawa/pages/home/: home_page.py
src/qawa/reports/screenshots/: .gitignore
src/qawa/tests/: conftest.py
src/qawa/tests/blog/: test_blog.py
tests/: conftest.py
tests/blog/: test_blog.py
utilities/api/: endpoints.py
utilities/helpers/: date_time_functions.py
